apps/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 1411
    - protocol: TCP
      name: https
      port: 443
      targetPort: 1411
